--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.555.0",
-    "next": "16.0.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.67.0",
     "react-leaflet": "^5.0.0",
     "zod": "^4.1.13",
