--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "lucide-react": "^0.468.0",
     "next": "^15.1.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-leaflet": "^4.2.1"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
