--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.468.0",
+    "maplibre-gl": "^5.17.0",
     "next": "^15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-map-gl": "^8.1.0",
     "recharts": "^3.6.0"
   },
   "devDependencies": {
