--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@capacitor/status-bar": "^8.0.0",
     "@supabase/supabase-js": "^2.49.1",
     "date-fns": "^4.1.0",
+    "firebase-admin": "^13.6.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.468.0",
     "maplibre-gl": "^5.17.0",
