--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@capacitor/push-notifications": "^8.0.0",
     "@capacitor/status-bar": "^8.0.0",
     "@supabase/supabase-js": "^2.49.1",
+    "capacitor-voice-recorder": "^7.0.6",
     "date-fns": "^4.1.0",
     "firebase-admin": "^13.6.1",
     "leaflet": "^1.9.4",
