--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@capacitor/push-notifications": "^8.0.0",
     "@capacitor/status-bar": "^8.0.0",
     "@supabase/supabase-js": "^2.49.1",
+    "browser-image-compression": "^2.0.2",
     "capacitor-voice-recorder": "^7.0.6",
+    "cloudinary": "^2.9.0",
     "date-fns": "^4.1.0",
     "firebase-admin": "^13.6.1",
     "leaflet": "^1.9.4",
