--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "recharts": "^3.6.0"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
     "@tailwindcss/postcss": "^4.0.0",
     "@types/leaflet": "^1.9.15",
     "@types/node": "^22.10.2",
